fix(project): add more null checks for attachments
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>